re PR middle-end/13392 (ICE in convert_from_eh_region_ranges_1, at except.c:1133)

PR middle-end/13392
	* builtins.c (expand_builtin_expect_jump): Handle conditional jumps
	to drop through label.  Don't fall back to SCC even when conditional
	jump has not been found.

	* g++.dg/opt/expect2.C: New test.

From-SVN: r75687